using System.Collections;
using System.Collections.Generic;
using UnityEngine;

public static class TagManager
{
    public const string MOVEMENT_X = "Horizontal";
    public const string MOVEMENT_Y = "Vertical";

    public const string MOUSE_X= "Mouse X";
    public const string MOUSE_Y = "Mouse Y";

    public const string ATTACK_TRIGGER = "ATTACK";
    public const string AIM_TRIGGER = "AIM";

    public const string FPS_CAMERA_AIM_IN = "AIM_IN";
    public const string FPS_CAMERA_AIM_OUT = "AIM_OUT";

    public const string AXE_TAG = "AXE";
    public const string SPEAR_TAG = "SPEAR";
    public const string BOW_TAG = "BOW";


    public const string ENEMEY_RUN = "RUN";
    public const string ENEMY_WALK = "WALK";
    public const string ENEMY_ATTACK = "ATTACK";
    public const string ENEMY_HIT_TRIGGER = "ISHIT";
    public const string ENEMY_DEAD_TRIGGER = "ISDEAD";


    public const string ENEMY_TAG = "Enemy";
    public const string PLAYER_TAG = "Player";

    public const string PLAY_ANIMATION_TRIGGER = "Play";

    public const string GAME_OVER_SCREEN_TAG = "GameOver";


}